# llm-summariser-service

./: .coderabbit.yaml  .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
fastAPI-backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml  run_integration_tests.py
fastAPI-backend/app/: main.py
fastAPI-backend/background_tasks/: runner.py  summarizer.py
fastAPI-backend/tests/: conftest.py  test_documents.py  test_integration_concurrency.py  test_summarizer.py
