[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-summariser-service"
version = "0.1.0"
description = "FastAPI-based backend API for summarization"
authors = ["surakshaaithal"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {version = ">=0.35.0,<0.36.0", extras = ["standard"]}
redis = ">=5.0.0,<6.0.0"
ollama = ">=0.3.0,<0.4.0"
httpx = ">=0.27,<0.28"
requests = ">=2.31.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"
mypy = ">=1.18.1,<2.0.0"
pre-commit = ">=4.3.0,<5.0.0"
pytest = ">=8.4.2,<9.0.0"
pytest-asyncio = ">=0.25.0,<1.0.0"
pytest-order = ">=1.2.0,<2.0.0"
httpx = ">=0.27,<0.28"

[tool.pytest.ini_options]
asyncio_mode = "auto"
